--- a/atp-web/src/main/webapp/WEB-INF/web.xml
+++ b/atp-web/src/main/webapp/WEB-INF/web.xml
@@ -56,7 +56,7 @@
         <!-- 自定义spring mvc的配置文件名称和路径 -->
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath*:WEB-INF/spring-mvc.xml</param-value>
+            <param-value>WEB-INF/spring-mvc.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
