--- a/atp-web/src/main/webapp/WEB-INF/web.xml
+++ b/atp-web/src/main/webapp/WEB-INF/web.xml
@@ -51,18 +51,14 @@
     </listener>
     <!-- Spring MVC配置 -->
     <servlet>
-        <servlet-name>springMVC</servlet-name>
+        <servlet-name>spring-mvc</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <!-- 自定义spring mvc的配置文件名称和路径 -->
-        <init-param>
-            <param-name>contextConfigLocation</param-name>
-            <param-value>WEB-INF/spring-mvc.xml</param-value>
-        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <!-- spring mvc 请求后缀 -->
     <servlet-mapping>
-        <servlet-name>springMVC</servlet-name>
+        <servlet-name>spring-mvc</servlet-name>
         <!-- 拦截所有/rest/* 的请求,交给DispatcherServlet处理,性能最好 -->
         <url-pattern>/</url-pattern>
     </servlet-mapping>
