数据库查询config信息

--- a/atp-dao/src/main/resources/dao.properties
+++ b/atp-dao/src/main/resources/dao.properties
@@ -3,10 +3,12 @@
 #============================================================================
 jdbc.mysql.driver=com.mysql.jdbc.Driver
 #jdbc.mysql.url=jdbc:mysql://192.168.2.35:3306/atp?characterEncoding=utf8&allowMultiQueries=true
-jdbc.mysql.url=jdbc:mysql://localhost/atp?characterEncoding=utf8&allowMultiQueries=true
-jdbc.mysql.username=tester
-jdbc.mysql.password=hml188945
-
+#jdbc.mysql.url=jdbc:mysql://localhost/atp?characterEncoding=utf8&allowMultiQueries=true
+#jdbc.mysql.username=tester
+#jdbc.mysql.password=hml188945
+jdbc.mysql.url=jdbc:mysql://192.168.1.108:3306/atp?characterEncoding=utf8&allowMultiQueries=true
+jdbc.mysql.username=hanminglu
+jdbc.mysql.password=hml729918
 #============================================================================
 # common settings
 #============================================================================
