--- a/atp-biz/pom.xml
+++ b/atp-biz/pom.xml
@@ -147,6 +147,11 @@
             <artifactId>xml-apis</artifactId>
             <version>1.4.01</version>
         </dependency>
+        <dependency>
+            <groupId>com.uusoft</groupId>
+            <artifactId>top-model</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
